# simdutf-bazel

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
